--- a/andrewschmidt/templates/index.html
+++ b/andrewschmidt/templates/index.html
@@ -7,14 +7,24 @@
 </head>
 
 <body>
+    <div class="container">
+        <div>
+            <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
+        </div>
+        <!------------------------------------------------------------------>
+        <hr class="line">
+        <div class="navbar">
+            <p class="navbar_text">
+                <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
+                <a class="nav" href="/projects/">Projects</a>
+                <a class="nav" href="/photography/">Photography</a>
+                <a class="nav" href="/resume/">Resume</a>
+                <a class="nav" href="/aboutme/">About Me</a>
+            </p>
+        </div>
+        <!------------------------------------------------------------------>
+        <hr class="line">
 
-    <div>
-        <h1>Andrew B Schmidt</h1>
     </div>
-
-    <div>
-        <p>Test</p>
-    </div>
-
 </body>
 </html>
