--- a/andrewschmidt/static/css/style.css
+++ b/andrewschmidt/static/css/style.css
@@ -29,9 +29,11 @@ p.navbar_text {
 }
 
 h1.name {
-    font-family: 'Crimson Text', serif;
+    /* font-family: 'Crimson Text', serif; */
+    font-family: 'Montserrat', sans-serif;
     font-size: 48px;
-    font-weight: normal;
+    font-weight: 300;
+    font-variant: small-caps;
     color: var(--myblue)
 }
 
