--- a/andrewschmidt/templates/404.html
+++ b/andrewschmidt/templates/404.html
@@ -18,7 +18,7 @@
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
                 <a class="nav" href="/projects/">Projects</a>
                 <a class="nav" href="/photography/">Photography</a>
-                <a class="nav" href="/resume/">Resume</a>
+                <a class="nav" href="/static/files/resume.pdf">Resume</a>
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
