--- a/andrewschmidt/templates/index.html
+++ b/andrewschmidt/templates/index.html
@@ -24,6 +24,18 @@
         </div>
         <!------------------------------------------------------------------>
         <hr class="line">
+        <img class="profpic" src="/static/images/profpic.jpg">
+        <div>
+            <p class="side_text">
+                I am a Computer Science student at the University of Michigan.
+            </p>
+            <p class="side_text">
+                Learn more <a href="/aboutme/">about me</a>, <a href="/projects/">my projects</a>, or <a href="/photography/">my other passions</a>.
+            </p
+        </div>
+        <!------------------------------------------------------------------>
+        <hr class="line">
+        <!------------------------------------------------------------------>
 
     </div>
 </body>
