--- a/andrewschmidt/static/css/style.css
+++ b/andrewschmidt/static/css/style.css
@@ -1,5 +1,7 @@
 :root {
-    --myblue: #0000A0
+    --myblue: #0000A0;
+    --mygray: #DCDCDC;
+    font-family: 'Montserrat', sans-serif;
 }
 
 div {
@@ -7,10 +9,18 @@ div {
     margin-right: auto;
 }
 
-.container {
+div.container {
     margin-left: auto;
     margin-right: auto;
     width: 65vw;
+}
+
+div.projdiv {
+    margin-left: auto;
+    margin-right: auto;
+    width: 65vw;
+    background-color: var(--mygray);
+    border-left: 8px solid var(--myblue)
 }
 
 .profpic {
@@ -24,14 +34,10 @@ div {
     font-variant: small-caps;
 }
 
-p.navbar_text {
-    text-align: center
-}
-
 h1.name {
     /* font-family: 'Crimson Text', serif; */
     font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
+    font-size: 56px;
     font-weight: 300;
     font-variant: small-caps;
     color: var(--myblue)
@@ -41,22 +47,57 @@ h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 28px;
     font-weight: 300;
+    font-style: italic;
+    color: #010101;
+    padding: 10px;
 }
 
-p {
+h3 {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
+    font-weight: 600;
+    color: black;
+    margin-left: 10px;
+}
+
+
+p, li {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     font-weight: normal;
 }
 
 p.side_text {
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
+}
+
+p.navbar_text {
+    text-align: center;
+    font-size: 20px;
+}
+
+p.footer {
+    text-align: right;
+    font-size: 12px;
+    color: gray;
 }
 
 hr.line {
     border-top: 1px solid black;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: black;
+}
+
+a:hover, a:active {
+    color: var(--myblue);
 }
 
 a.nav:link, a.nav:visited {
@@ -71,7 +112,37 @@ a.nav:hover, a.nav:active {
     background-color: var(--myblue);
 }
 
-a {
-    text-decoration: none;
+video {
+    width: 100%;
+    padding-top: 20px;
+}
+
+.collapsible, .fakecollapsible {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  width: 50%;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  border: none;
+  border-left: 2px solid var(--myblue);
+  border-bottom: 2px solid var(--myblue);
+
+}
+
+.active, .collapsible:hover, .fakecollapsible:hover {
+  background-color: var(--mygray);
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: white;
 }
 
