--- a/andrewschmidt/templates/aboutme.html
+++ b/andrewschmidt/templates/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <title>Andrew B Schmidt</title>
     <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600" rel="stylesheet">
 </head>
 
 <body>
