--- a/andrewschmidt/templates/inprogress.html
+++ b/andrewschmidt/templates/inprogress.html
@@ -25,8 +25,9 @@
         <!------------------------------------------------------------------>
         <hr class="line">
         <div>
-            <p> 404: Page not found </p>
-            <p> Please try retyping the URL or using the available links </p>
+            <p> Sorry, this page isn't currently available :( </p>
+            <p> I'm working on redesigning my website myself, and I am currently in the process of migrating my portfolio from my old site. </p>
+            <p> Check back soon, it should be fixed shortly </p>
         </div>
 
     </div>
