--- a/andrewschmidt/templates/photography_OLD.html
+++ b/andrewschmidt/templates/photography_OLD.html
@@ -12,22 +12,27 @@
             <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
         </div>
         <!------------------------------------------------------------------>
-        <hr class="line">
         <div class="navbar">
             <p class="navbar_text">
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
                 <a class="nav" href="/projects/">Projects</a>
-                <a class="nav" href="/photography/">Photography</a>
+                <a class="current_nav" href="/photography/">Photography</a>
                 <a class="nav" href="/static/files/resume.pdf">Resume</a>
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
         <!------------------------------------------------------------------>
         <hr class="line">
-        <div>
-            <p> 404: Page not found </p>
-            <p> Please try retyping the URL or using the available links </p>
-        </div>
+        <a href="/photography/places/">
+            <div class=halfbgtop>
+                <p class=imgtext>PLACES</p>
+            </div>
+        </a>
+        <a href="/photography/themes/">
+            <div class=halfbgbottom>
+                <p class=imgtext>THEMES</p>
+            </div>
+        </a>
 
     </div>
 </body>
