--- a/andrewschmidt/templates/projects.html
+++ b/andrewschmidt/templates/projects.html
@@ -12,11 +12,11 @@
             <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
         </div>
         <!------------------------------------------------------------------>
-        <hr class="line">
+
         <div class="navbar">
             <p class="navbar_text">
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
-                <a class="nav" href="/projects/">Projects</a>
+                <a class="current_nav" href="/projects/">Projects</a>
                 <a class="nav" href="/photography/">Photography</a>
                 <a class="nav" href="/static/files/resume.pdf">Resume</a>
                 <a class="nav" href="/aboutme/">About Me</a>
