--- a/andrewschmidt/templates/index.html
+++ b/andrewschmidt/templates/index.html
@@ -12,7 +12,7 @@
             <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
         </div>
         <!------------------------------------------------------------------>
-        <hr class="line">
+
         <div class="navbar">
             <p class="navbar_text">
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
@@ -30,7 +30,7 @@
                 I am a Computer Science student at the University of Michigan.
             </p>
             <p class="side_text">
-                Learn more <a href="/aboutme/">about me</a>, <a href="/projects/">my projects</a>, or <a href="/photography/">my other passions</a>.
+                Learn more <a class="intext" href="/aboutme/">about me</a>, <a class="intext" href="/projects/">my projects</a>, or <a class="intext" href="/photography/">my other passions</a>.
             </p
         </div>
         <!------------------------------------------------------------------>
