--- a/andrewschmidt/templates/photography_grid.html
+++ b/andrewschmidt/templates/photography_grid.html
@@ -12,21 +12,39 @@
             <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
         </div>
         <!------------------------------------------------------------------>
-        <hr class="line">
         <div class="navbar">
             <p class="navbar_text">
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
                 <a class="nav" href="/projects/">Projects</a>
-                <a class="nav" href="/photography/">Photography</a>
+                <a class="current_nav" href="/photography/">Photography</a>
                 <a class="nav" href="/static/files/resume.pdf">Resume</a>
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
-        <!------------------------------------------------------------------>
         <hr class="line">
-        <div>
-            <p> 404: Page not found </p>
-            <p> Please try retyping the URL or using the available links </p>
+        <!------------------------------------------------------------------>
+
+        <!-- <div class="grid">
+            {% for item in navbar_items %}
+                <div>
+                    <a class="nav" href={{ item.href }}>
+                        <img src={{ "/static/photography/" ~ item.img }} alt={{ item.text }}>
+                    </a>
+                    <p class="small_navbar"> {{ item.text }} </p>
+                </div>
+            {% endfor %}
+
+        </div> -->
+
+        <div class="grid">
+            {% for item in grid_items %}
+                <a href={{ item.href }}>
+                    <div class="gridbg" style={{"background-image:url('/static/photography/" ~ item.img ~ "')"}}>
+                        <p class="imgtext"> {{ item.text }} </p>
+                    </div>
+                </a>
+            {% endfor %}
+
         </div>
 
     </div>
