--- a/andrewschmidt/templates/video_gallery.html
+++ b/andrewschmidt/templates/video_gallery.html
@@ -12,22 +12,27 @@
             <a href="/"><h1 class="name">Andrew B Schmidt</h1></a>
         </div>
         <!------------------------------------------------------------------>
-        <hr class="line">
         <div class="navbar">
             <p class="navbar_text">
                 <a class="nav" href="https://www.linkedin.com/in/abschmidt6/">LinkedIn</a>
                 <a class="nav" href="/projects/">Projects</a>
-                <a class="nav" href="/photography/">Photography</a>
+                <a class="current_nav" href="/photography/">Photography</a>
                 <a class="nav" href="/static/files/resume.pdf">Resume</a>
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
-        <!------------------------------------------------------------------>
         <hr class="line">
+
+        {% for video in videos %}
         <div>
-            <p> 404: Page not found </p>
-            <p> Please try retyping the URL or using the available links </p>
+            <video width=100% controls>
+            <source src={{ "/static/videos/" ~ video.filename }} type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
         </div>
+        {% endfor %}
+
+
 
     </div>
 </body>
