--- a/andrewschmidt/templates/photography_grid.html
+++ b/andrewschmidt/templates/photography_grid.html
@@ -39,7 +39,7 @@
         <div class="grid">
             {% for item in grid_items %}
                 <a href={{ item.href }}>
-                    <div class="gridbg" style={{"background-image:url('/static/photography/" ~ item.img ~ "')"}}>
+                    <div class="gridbg" style={{"background-image:url('/static/photography/thumbnails/" ~ item.img ~ "')"}}>
                         <p class="imgtext"> {{ item.text }} </p>
                     </div>
                 </a>
