--- a/andrewschmidt/templates/photography_gallery.html
+++ b/andrewschmidt/templates/photography_gallery.html
@@ -23,6 +23,14 @@
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
+        <div class="navbar">
+            <p class="small_navbar">
+                <a class="nav" href="/photography/places/">Places</a>
+                <a class="nav" href="/photography/timelapses/">Timelapses</a>
+                <a class="nav" href="/photography/astro/">Astrophotography</a>
+                <a class="nav" href="/photography/sports/">Sports</a>
+            </p>
+        </div>
         <hr class="line">
         <h2>{{ category }}</h2>
         <div class="row">
