--- a/andrewschmidt/templates/photography_grid.html
+++ b/andrewschmidt/templates/photography_grid.html
@@ -21,20 +21,16 @@
                 <a class="nav" href="/aboutme/">About Me</a>
             </p>
         </div>
+        <div class="navbar">
+            <p class="small_navbar">
+                <a class="nav" href="/photography/places/">Places</a>
+                <a class="nav" href="/photography/timelapses/">Timelapses</a>
+                <a class="nav" href="/photography/astro/">Astrophotography</a>
+                <a class="nav" href="/photography/sports/">Sports</a>
+            </p>
+        </div>
         <hr class="line">
         <!------------------------------------------------------------------>
-
-        <!-- <div class="grid">
-            {% for item in navbar_items %}
-                <div>
-                    <a class="nav" href={{ item.href }}>
-                        <img src={{ "/static/photography/" ~ item.img }} alt={{ item.text }}>
-                    </a>
-                    <p class="small_navbar"> {{ item.text }} </p>
-                </div>
-            {% endfor %}
-
-        </div> -->
 
         <div class="grid">
             {% for item in grid_items %}
