--- a/andrewschmidt/templates/photography_gallery.html
+++ b/andrewschmidt/templates/photography_gallery.html
@@ -37,7 +37,7 @@
             {% for column in images %}
                 <div class="column">
                     {% for img in column %}
-                        <a href={{ "/static/photography/" ~ img.filename }} data-lightbox="{{ category }}" data-title="{{ img.desc }}">
+                        <a href={{ "/static/photography/gallery/" ~ img.filename }} data-lightbox="{{ category }}" data-title="{{ img.desc }}">
                             <img src={{ "/static/photography/gallery/" ~ img.filename }}>
                         </a>
                     {% endfor %}
