--- a/andrewschmidt/templates/aboutme.html
+++ b/andrewschmidt/templates/aboutme.html
@@ -28,15 +28,17 @@
         <div>
 
             <p class="side_text">
-            I am a Junior studying Computer Science Engineering at the University of Michigan.
-            I have taken couses on Data Structures and Algorithms, Computer Architechture, Computer Security, Web Systems, Database Management, and more.
+            I am a Senior studying Computer Science Engineering at the University of Michigan.
+
+            I have taken couses on Data Structures and Algorithms, Computer Architechture, Computer Security, Web Systems, Search Engines, Software Engineering, Database Management, and more.
             I am experienced in C++, C, Python, Java, SQL, Bash, and Git.
+
+            I plan to graduate with a minor in Entrepreneurship and have taken several business and finance courses.
             </p>
 
             <p class="side_text">
-            Currently, I am seeking an internship related to Computer Science
-            for the summer of 2019.
-            My related interests include computer security, database management, and software development.
+            Currently, I am seeking full time employment beginning in May 2020.
+            My related interests include computer security, database management, penetration testing, and software development.
             </p>
 
             <p class="side_text">
