Added descriptions and keywords

--- a/andrewschmidt/templates/photography_grid.html
+++ b/andrewschmidt/templates/photography_grid.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>Andrew B Schmidt</title>
+
+    <meta name="description" content="Andrew B Schmidt - University of Michigan 2020 - Computer Science - Photography - Entrepreneurship"/>
+    <meta name="keywords" content="Andrew B Schmidt - University of Michigan 2020 - Photography"/>
+
     <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600" rel="stylesheet">
 </head>
