Updated to explain the reason for this 404 --> has to do with timelapse page taking too long to load. Temporary change, will be reverted when timelapse page is fixed.

--- a/andrewschmidt/templates/404.html
+++ b/andrewschmidt/templates/404.html
@@ -26,7 +26,9 @@
         <hr class="line">
         <div>
             <p> 404: Page not found </p>
-            <p> Please try retyping the URL or using the available links </p>
+            <p> Sorry, I'm working on a way of optimizing this page. </p>
+            <p> Currently it hangs too long while trying to load all of the high-quality timelapse videos. </p>
+            <p> Check back soon. I hope to have this fixed quickly </p>
         </div>
 
     </div>
