Updates before career fair

--- a/andrewschmidt/templates/aboutme.html
+++ b/andrewschmidt/templates/aboutme.html
@@ -32,11 +32,13 @@
         <div>
 
             <p class="side_text">
-            I am a Senior studying Computer Science Engineering at the University of Michigan.
+            I am a Senior studying Computer Science Engineering at the University of Michigan. </p>
 
+            <p class="side_text">
             I have taken couses on Data Structures and Algorithms, Computer Architechture, Computer Security, Web Systems, Search Engines, Software Engineering, Database Management, and more.
-            I am experienced in C++, C, Python, Java, SQL, Bash, and Git.
+            I am experienced in C++, C, Python, Java, SQL, Bash, and Git. </p>
 
+            <p class="side_text">
             I plan to graduate with a minor in Entrepreneurship and have taken several business and finance courses.
             </p>
 
